--- a/livestockapp/templates/animal_category/insert.html
+++ b/livestockapp/templates/animal_category/insert.html
@@ -24,8 +24,8 @@
 </style>
     {% csrf_token %}
     <div class="from-group">
-      <label for="name">Name<span style="color:red; font-weight:bold;">*</span></label>
-      <input type="text" class="form-control" id="name" name="name"  >
+      <label for="cat_name">Name<span style="color:red; font-weight:bold;">*</span></label>
+      <input type="text" class="form-control" id="cat_name" name="cat_name"  >
     </div>
     <div class="from-group">
       <label for="description" >Description</label>
