--- a/livestockapp/templates/navbar.html
+++ b/livestockapp/templates/navbar.html
@@ -31,6 +31,15 @@
           <a class="dropdown-item" href="/show">Category List</a>
         </div>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Animal_Profile
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/insert_animal_profile">Add Animal_Profile</a>
+          <a class="dropdown-item" href="/list_animal_profile">Animal_Profile List</a>
+        </div>
+      </li>
       
     </ul>
     <div class=" my-2 my-lg-0">
