--- a/livestockapp/templates/animal_profile/list_animal_profile.html
+++ b/livestockapp/templates/animal_profile/list_animal_profile.html
@@ -58,8 +58,8 @@
        <td>{{ani.created_on}}</td>
        <td>{{ani.updated_by}}</td>
        <td>{{ani.updated_on}}</td>
-       <td><a href="/edit/{{ani.id}}" class="btn btn-sm btn-warning"/>Edit</td>
-       <td><a href="/delete/{{ani.id}}" class="btn btn-sm btn-danger"/>Delete</td>
+       <td><a href="/animal_pro_edit/{{ani.id}}" class="btn btn-sm btn-warning"/>Edit</td>
+       <td><a href="/animal_pro_delete/{{ani.id}}" class="btn btn-sm btn-danger"/>Delete</td>
       </tr>
       {% endfor %}
     </tbody>
