--- a/livestockapp/templates/navbar.html
+++ b/livestockapp/templates/navbar.html
@@ -36,8 +36,8 @@
           Animal_Profile
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/insert_animal_profile">Add Animal_Profile</a>
-          <a class="dropdown-item" href="/list_animal_profile">Animal_Profile List</a>
+          <a class="dropdown-item" href='/insert_animal_profile'>Add Animal_Profile</a>
+          <a class="dropdown-item" href='/list_animal_profile'>Animal_Profile List</a>
         </div>
       </li>
       
