--- a/livestockapp/templates/animal_profile/list_animal_profile.html
+++ b/livestockapp/templates/animal_profile/list_animal_profile.html
@@ -45,14 +45,14 @@
        <td>{{ani.category_id}}</td>
        <td>{{ani.image}}</td>
        <td>{{ani.purchase_price}}</td>
+       <td>{{ani.purchased_on|date:"d-m-Y"}}</td>
        <td>{{ani.purchased_by}}</td>
-       <td>{{ani.purchased_on}}</td>
-       <td>{{ani.date_of_birth}}</td>
+       <td>{{ani.date_of_birth|date:"d-m-Y"}}</td>
        <td>{{ani.description}}</td>
        <td>{{ani.gender}}</td>  
        <td>{{ani.is_pragnent}}</td>
-       <td>{{ani.pragnancy_start_date}}</td>
-       <td>{{ani.pragnancy_end_date}}</td>
+       <td>{{ani.pragnancy_start_date|date:"d-m-Y"}}</td>
+       <td>{{ani.pragnancy_end_date|date:"d-m-Y"}}</td>
        <td>{{ani.status}}</td>
        <td>{{ani.created_by}}</td>
        <td>{{ani.created_on}}</td>
