--- a/livestockapp/templates/animal_profile/update_animal_profile.html
+++ b/livestockapp/templates/animal_profile/update_animal_profile.html
@@ -18,11 +18,82 @@
               <input type="hidden" class="form-control" name="id" required maxlength="50" value="{{animal.id}}" readonly/>
 
                 <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="token_no">Token No:</label>
+                  <div class="col-sm-4">
+                 <input type="text" class="form-control" name="token_no" value="{{animal.token_no}}" />
+                  </div>            
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="ani_name">Name:</label>
+                  <div class="col-sm-4">
+                 <input type="text" class="form-control" name="ani_name" value="{{animal.ani_name}}" />
+                  </div>            
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="color">Color:</label>
+                  <div class="col-sm-4">
+                 <input type="text" class="form-control" name="color" value="{{animal.color}}" />
+                  </div>            
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="weight">Weight:</label>
+                  <div class="col-sm-4">
+                 <input type="text" class="form-control" name="weight" value="{{animal.weight}}" />
+                  </div>            
+                </div>
+                <div class="form-group row">
                   <label class="col-sm-2 col-form-label" for="name">Name:</label>
                   <div class="col-sm-4">
                  <input type="text" class="form-control" name="name" value="{{animal.name}}" />
-                  </div>
-                  
+                  </div>            
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="name">Name:</label>
+                  <div class="col-sm-4">
+                 <input type="text" class="form-control" name="name" value="{{animal.name}}" />
+                  </div>            
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="name">Name:</label>
+                  <div class="col-sm-4">
+                 <input type="text" class="form-control" name="name" value="{{animal.name}}" />
+                  </div>            
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="name">Name:</label>
+                  <div class="col-sm-4">
+                 <input type="text" class="form-control" name="name" value="{{animal.name}}" />
+                  </div>            
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="name">Name:</label>
+                  <div class="col-sm-4">
+                 <input type="text" class="form-control" name="name" value="{{animal.name}}" />
+                  </div>            
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="name">Name:</label>
+                  <div class="col-sm-4">
+                 <input type="text" class="form-control" name="name" value="{{animal.name}}" />
+                  </div>            
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="name">Name:</label>
+                  <div class="col-sm-4">
+                 <input type="text" class="form-control" name="name" value="{{animal.name}}" />
+                  </div>            
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="name">Name:</label>
+                  <div class="col-sm-4">
+                 <input type="text" class="form-control" name="name" value="{{animal.name}}" />
+                  </div>            
+                </div>
+                <div class="form-group row">
+                  <label class="col-sm-2 col-form-label" for="name">Name:</label>
+                  <div class="col-sm-4">
+                 <input type="text" class="form-control" name="name" value="{{animal.name}}" />
+                  </div>            
                 </div>
                 <div class="form-group row">
                   <label class="col-sm-2 col-form-label" for="name">Description:</label>
