--- a/livestockapp/templates/animal_profile/insert_animal_profile.html
+++ b/livestockapp/templates/animal_profile/insert_animal_profile.html
@@ -153,7 +153,7 @@
       <div class="from-group">
         <label class=" control-label">Date of Birth :</label>
         
-        <input type="date" class="form-control" id="date_of_birth" name="date_of_birth"  value="{{date}}">
+        <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" >
       </div>
     
       <div class="form-group">
@@ -169,7 +169,7 @@
   
   <div id ="hiddenFields1">
     <div class="from-group" >
-      <label class=" control-label">is_Pragnent :<span style="color:red; font-weight:bold;">*</span></label>
+      <label class=" control-label">is Pragnent :<span style="color:red; font-weight:bold;">*</span></label>
       
       <input type="checkbox"  name="is_pragnant" id="is_pragnant" >
       <input type="text"  name="pragnant_val" id="pragnant_val" value="0" hidden>
@@ -179,7 +179,7 @@
     <div id ="hiddenFields">
       <div class="from-group" id="pragnancy_start_date">
         <label class=" control-label" >Pregnancy Start Date :<span style="color:red; font-weight:bold;">*</span></label>
-        <input type="date" class="form-control"  name="pragnancy_start_date"  value="{{date}}">
+        <input type="date" class="form-control"  name="pragnancy_start_date"  >
       </div>
    
       <div class="from-group" id="pragnancy_end_date">
@@ -189,7 +189,7 @@
       </div>
     </div>
      <div class="from-group">
-      <label for="status" >is_Active :<span style="color:red; font-weight:bold;">*</span></label>
+      <label for="status" >is Active :<span style="color:red; font-weight:bold;">*</span></label>
       
      <input type="checkbox"  id="status" name="status">
      <input type="text"  id="status_val" name="status_val"  value="0" hidden>
