date realted isses in update, insert and listing hase been solved

--- a/livestockapp/templates/animal_profile/insert_animal_profile.html
+++ b/livestockapp/templates/animal_profile/insert_animal_profile.html
@@ -141,7 +141,7 @@
       <div class="from-group">
         <label for="purchased_date">Purchased Date :</label>
         
-        <input type="text" class="form-control" id="purchased_on" name="purchased_on"  >
+        <input type="date" class="form-control" id="purchased_on" name="purchased_on"  >
       </div>
     
       <div class="from-group">
