--- a/livestockapp/templates/animal_profile/list_animal_profile.html
+++ b/livestockapp/templates/animal_profile/list_animal_profile.html
@@ -24,10 +24,7 @@
         <th scope="col">pregnancy Start Date</th>
         <th scope="col">pregnancy End Date</th>
         <th scope="col">Status</th>
-        <th scope="col">Created By</th>
-        <th scope="col">Created On</th>
-        <th scope="col">Updated By</th>
-        <th scope="col">Updated On</th>
+
         <th scope="col">Edit</th>
         <th scope="col">Delete</th>
 
@@ -42,22 +39,22 @@
        <td>{{ani.name}}</td>
        <td>{{ani.color}}</td>
        <td>{{ani.weight}}</td>
-       <td>{{ani.category_id}}</td>
+       <td>{{ani.category.name}}</td>
        <td>{{ani.image}}</td>
        <td>{{ani.purchase_price}}</td>
        <td>{{ani.purchased_on|date:"d-m-Y"}}</td>
        <td>{{ani.purchased_by}}</td>
        <td>{{ani.date_of_birth|date:"d-m-Y"}}</td>
        <td>{{ani.description}}</td>
-       <td>{{ani.gender}}</td>  
-       <td>{{ani.is_pragnent}}</td>
+       <td>{{ani.gender}}</td> 
+      {% if  ani.is_pragnent == 1 %}
+      <td>Yes</td>
+      {% endif %}
        <td>{{ani.pragnancy_start_date|date:"d-m-Y"}}</td>
        <td>{{ani.pragnancy_end_date|date:"d-m-Y"}}</td>
-       <td>{{ani.status}}</td>
-       <td>{{ani.created_by}}</td>
-       <td>{{ani.created_on}}</td>
-       <td>{{ani.updated_by}}</td>
-       <td>{{ani.updated_on}}</td>
+       {% if  ani.status == 1 %}
+      <td>Active</td>
+      {% endif %}
        <td><a href="/animal_pro_edit/{{ani.id}}" class="btn btn-sm btn-warning"/>Edit</td>
        <td><a href="/animal_pro_delete/{{ani.id}}" class="btn btn-sm btn-danger"/>Delete</td>
       </tr>
